objects/vlocity_cmt__Subscription__c.object
<CustomObject>
    <description>A service generally used by one user (or at one location) at a time that is governed by a single payment plan at any given time. A user of a network becomes a ”subscriber” through the establishment of their first “subscription”.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the customer account that is considered the owner of this subscription.</description>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Subscriptions</relationshipLabel>
        <relationshipName>CustomerSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account responsible for paying for the subscription.</description>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billed Subscriptions</relationshipLabel>
        <relationshipName>BilledSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrentContractEndDate__c</fullName>
        <description>The end date of the current contract governing this subscription.</description>
        <label>Current Contract End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrentContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the current contract--used when the contract is tracked in the system.</description>
        <label>Current Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrentContractStartDate__c</fullName>
        <description>The start date of the current contract governing this subscription.</description>
        <label>Current Contract Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrentContractTerm__c</fullName>
        <description>The number of months term of the current contract.</description>
        <label>Current Contract Term (months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDate__c</fullName>
        <description>Date and time when this subscription was terminated (if it is no longer active).</description>
        <label>Subscription End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OldMSISDN__c</fullName>
        <description>Stores the previous phone number of the Subscription.</description>
        <label>Old MSISDN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the premises which is receiving the services from this subscription if the services are location-specific.</description>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account that identifies the service location or subscriber that is the user of this subscription.</description>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriber Subscriptions</relationshipLabel>
        <relationshipName>SubscriberSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the contact who is the user of this subscription if the services are in use by an individual.</description>
        <label>Service User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceIdentifier__c</fullName>
        <description>Unique identifier of the service used by the customer.</description>
        <externalId>true</externalId>
        <label>Service Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartDate__c</fullName>
        <description>Date and time when this subscription was first established.</description>
        <label>Subscription Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>Status of this subscription.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubscriptionNumber__c</fullName>
        <description>Alphanumeric unique identifier of this subscription.</description>
        <externalId>true</externalId>
        <label>Subscription Number</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SuspendDate__c</fullName>
        <description>If the services for this subscription are suspended, the date and time when the services were suspended.</description>
        <label>Date Suspended</label>
        <type>DateTime</type>
    </fields>
    <label>Subscription</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>